@@ -2277,7 +2277,10 @@ function processQuery(query, explain, planIndex) {
   stringBuilder.appendLine();
 
   printRules(plan.rules, explain.stats);
-  printModificationFlags(modificationFlags);
+  // printing of "write query options" normally does not help to get any
+  // better insights, so it has been deactivated. the code is kept around
+  // in case we still need it later.
+  // printModificationFlags(modificationFlags);
   if (profileMode) {
     printStats(explain.stats, isCoord);
     printProfile(explain.profile);
@@ -2693,7 +2696,7 @@ function inspectDump(filename, outfile) {
   }
 }
 
-function explainQuerysRegisters(plan) {
+function explainQueryRegisters(plan) {
 
   /**
    * @typedef Node
@@ -3097,12 +3100,12 @@ function explainRegisters(data, options, shouldPrint) {
       stringBuilder.appendLine(section("Plan #" + (i + 1) + " of " + result.plans.length));
       stringBuilder.prefix = ' ';
       stringBuilder.appendLine();
-      explainQuerysRegisters(result.plans[i]);
+      explainQueryRegisters(result.plans[i]);
       stringBuilder.prefix = '';
     }
   } else {
     // single plan
-    explainQuerysRegisters(result.plan);
+    explainQueryRegisters(result.plan);
   }
 
   if (shouldPrint === undefined || shouldPrint) {
