@@ -1,6 +1,10 @@
 devel
 -----
 
+* Don't show "write query options" for AQL write queries in the explain and
+  profile output. The write query options normally don't produce any valuable
+  insights and only take up screen real estate.
+
 * FE-229: Improve shard rebalancing UI.
 
 * FE-20: fix UI placeholder format for locale when creating analyzers.
